--- a/core-base-libr/src/main/res/layout/layout_draw_canvas.xml
+++ b/core-base-libr/src/main/res/layout/layout_draw_canvas.xml
@@ -36,7 +36,7 @@
         android:paddingTop="20dp"
         android:orientation="vertical">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -75,7 +75,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/timeView"/>
 
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.ConstraintLayout>
 
 
 
