--- a/app/src/main/res/layout/layout_common_topbar_component.xml
+++ b/app/src/main/res/layout/layout_common_topbar_component.xml
@@ -9,14 +9,14 @@
     <View
         android:id="@+id/view_status_bar"
         android:layout_width="match_parent"
-        android:layout_height="0pt"
+        android:layout_height="0dp"
         android:background="@color/transparent"
         tools:background="@color/red_pay" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="88pt"
-        android:paddingHorizontal="30pt"
+        android:layout_height="44dp"
+        android:paddingHorizontal="3dp"
         android:background="@android:color/transparent"
         tools:background="@android:color/transparent">
 
@@ -25,10 +25,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:drawableLeft="@drawable/ic_title_back2"
-            android:drawablePadding="8pt"
+            android:drawablePadding="2dp"
             android:gravity="center"
             android:textColor="#333333"
-            android:textSize="28pt"
+            android:textSize="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -36,17 +36,17 @@
 
         <TextView
             android:id="@+id/tv_title"
-            android:layout_width="0pt"
-            android:layout_height="0pt"
-            android:layout_marginStart="120pt"
-            android:layout_marginEnd="120pt"
-            android:drawablePadding="8pt"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:drawablePadding="2dp"
             android:ellipsize="end"
             android:gravity="center"
             android:maxLines="1"
             android:textColor="#333333"
             android:textStyle="bold"
-            android:textSize="36pt"
+            android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -57,10 +57,10 @@
             android:id="@+id/tv_other"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawablePadding="8pt"
+            android:drawablePadding="2dp"
             android:gravity="center"
             android:textColor="#333333"
-            android:textSize="28pt"
+            android:textSize="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -71,6 +71,6 @@
     <View
         android:id="@+id/view_divider"
         android:layout_width="match_parent"
-        android:layout_height="1pt"
+        android:layout_height="1dp"
         android:background="#DBDBDB" />
 </merge>
